# pes-players

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: black.yml  flake.yml
src/: main.py
src/configs/: db.py  env_vars.py
src/models/: base_model.py  player_body_model.py  player_face_model.py  player_model.py  player_position_model.py  player_stats_model.py  player_teams_model.py  position_model.py
src/repositories/: players_repository.py
src/routers/: player_router.py
src/schemas/: player_schemas.py
src/services/: player_service.py
