[tool.poetry]
name = "pes-players"
version = "0.1.0"
description = ""
authors = ["TGRodriguez <tgrodriguez@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
black = "^23.12.0"
flakeheaven = "^3.3.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"

[tool.black]
line-length = 90

[tool.flakeheaven.plugins]
# include everything but W503: line break before binary operator
# because black does that :P
pyflakes = ["+*"]
pycodestyle = ["+*", "-W503"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
